[tool.poetry]
name = "nansen"
version = "0.1.0"
description = "Python SDK for the Nansen blockchain analytics API"
readme = "README.md"
license = "MIT"
authors = ["Nansen"]
packages = [{ include = "nansen", from = "src" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[tool.poetry.urls]
Homepage = "https://github.com/nansen-ai/nansen-python-sdk"
Documentation = "https://docs.nansen.ai"

[tool.poetry.dependencies]
python = ">=3.10,<4"
httpx = ">=0.23,<1"
pydantic = ">=2,<3"
typing-extensions = ">=4.7"
anyio = ">=3.5,<5"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
pytest-asyncio = ">=0.21"
respx = ">=0.20"
ruff = ">=0.1"
mypy = ">=1.0"
pre-commit = ">=3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
